# construction_marketplace

./: .gitignore  MANIFEST.in  README.md  SOP.md  license.txt  pyproject.toml  requirements.txt  setup.py
construction_marketplace/: __init__.py  api.py  hooks.py  install.py  modules.txt  patches.txt
construction_marketplace/config/: __init__.py  desktop.py
construction_marketplace/construction_marketplace/: __init__.py  demo.py  tasks.py  utils.py
construction_marketplace/construction_marketplace/doctype/construction_material/: __init__.py  construction_material.json  construction_material.py
construction_marketplace/construction_marketplace/doctype/customer_enquiry/: __init__.py  customer_enquiry.json  customer_enquiry.py
construction_marketplace/construction_marketplace/doctype/delivery_item/: delivery_item.json  delivery_item.py
construction_marketplace/construction_marketplace/doctype/delivery_schedule/: __init__.py  delivery_schedule.json  delivery_schedule.py
construction_marketplace/construction_marketplace/doctype/marketplace_customer/: __init__.py  marketplace_customer.json  marketplace_customer.py
construction_marketplace/construction_marketplace/doctype/marketplace_order/: __init__.py  marketplace_order.json  marketplace_order.py
construction_marketplace/construction_marketplace/doctype/marketplace_settings/: marketplace_settings.json  marketplace_settings.py
construction_marketplace/construction_marketplace/doctype/material_category/: __init__.py  material_category.json  material_category.py
construction_marketplace/construction_marketplace/doctype/material_grade/: __init__.py  material_grade.json  material_grade.py
construction_marketplace/construction_marketplace/notification/: delivery_alert.json  low_stock_alert.json  new_order_alert.json
construction_marketplace/public/css/: construction_marketplace.bundle.css  construction_marketplace.css
construction_marketplace/public/js/: construction_marketplace.bundle.js  construction_marketplace.js
construction_marketplace/www/: architects.html  checkout.html  contractors.html  dashboard.html  index.html  interior-designers.html  marketplace.html  material-view.html  materials.html  projects.html  provider-dashboard.html  request-quote.html  supplier-dashboard.html
construction_marketplace/www/api/: __init__.py
construction_marketplace/www/materials/: name.html
(+41 files in other folders)
