[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "construction_marketplace"
version = "0.1.0"
authors = [
    {name = "Sudhakar", email = ""},
]
description = "A comprehensive Construction Materials Marketplace application for Frappe/ERPNext v15+"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
keywords = ["frappe", "erpnext", "construction", "marketplace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Frappe is provided by the bench environment
dependencies = []

[project.urls]
Repository = "https://github.com/Sudhakar1110/construction_marketplace"

[tool.setuptools.packages.find]
include = ["construction_marketplace*"]

[tool.setuptools.package-data]
construction_marketplace = ["**/*"]
